Pagina inicio terminada

--- a/Pagina Personal/index.html
+++ b/Pagina Personal/index.html
@@ -5,47 +5,117 @@
 		<meta charset="utf-8"/>
 		<title>Joel Álvarez Myrrie | Web course </title>
 		<link rel="stylesheet" type="text/css" href="css/page.css">
+		<link href="https://fonts.googleapis.com/css?family=Lato%7CRaleway%7CPoiret+One" rel="stylesheet">
+
 	</head>
 	<body>
 		<header>
-
 			<nav id="main_menu">
 					<ul>
-					<li><a href="intro/">Intro</a></li>
-					<li><a href="xml/">XML</a></li>
-					<li><a href="css/">CSS</a></li>
-					<li><a href="js/">JS</a></li>
+					<li id="home"><a href="#">Joel Álvarez Myrrie</a></li>
 					<li><a href="php/">PHP</a></li>
+					<li><a href="js/">JS</a></li>
+					<li><a href="css/">CSS</a></li>
+					<li><a href="xhtml/">XHTML</a></li>
+					<li><a href="xml/">XML</a></li>
+					<li><a href="intro/">INTRO</a></li>
+
 					</ul>
-			</nav>			
-		</header>	
-		
-		<img src="img/profile.jpg" alt="Profile" height="200" id="profile_pic"/>
-		<h1>Joel Álvarez Myrrie</h1>
-	
+			</nav>
+		</header>
+
+		<div class="quote">
+				<blockquote class="bq3">
+						<p>"Never be bullied into silence. Never allow yourself to be made a victim. Accept no one's definition of your life; define yourself."</p>
+						<footer> — Harvey Fierstein</footer>
+				</blockquote>
+		</div>
+
+		<hr></hr>
+
 		<article id="content">
-			<h2>Course overview CI-2413</h2>
 			<section class="content_entry">
-				<h3>Introduction</h3>
-				<img src="img/intro.jpg" alt="Introduction"/>
-				<p>In this section we will discuss some important topics about web development and its basics.</p>
+				<img src="img/profile.jpg"  class="opacate" alt="Profile" height="200" class="center" id="profile_pic" alt="Profile Picture"/>
+				<p>
+						 ¡Hola! Soy Joel Álvarez, y soy un estudiante de computación e informatica de la UCR pronto a graduarse.
+						 Esta página corresponde al curso desarrollo de aplicaciones de internet, CI-2413.
+						 Se estarán subiendo los resultados a los ejercicios propuestos por el profesor,
+						 en la parte de <a href="/home/ejercicios.shtml" target="_blank">ejercicios</a>.
+							Los enunciados de los ejercicios se pueden encontrar en la
+							 <a href="http://jeisson.ecci.ucr.ac.cr/appweb/2016b/material/" target="_blank">página del profesor</a>.
+				</p>
 			</section>
-			
+
+			<hr></hr>
+
+			<section class="content_entry ">
+				<h2>Descripción del curso</h2>
+				<p>Este curso es una introducción al desarrollo de aplicaciones de software que emplean la red Internet como medio de comunicación, con especial énfasis en el uso de tecnologías web.
+					 El curso está orientado a estudiantes de tercer o cuarto año del bachillerato en computación.
+					 El curso está enfocado a los estándares web, como protocolos (ej: HTTP, HTTPS), lenguajes de etiquetado de contenido (ej: XML/HTML/XHTML), lenguajes de presentación (ej: CSS) y
+	 			 	lenguajes de comportamiento (ej: JavaScript) en el lado del cliente. Del lado del servidor, se estudiará el papel del servidor web y cómo crear sitios dinámicos con algún lenguaje de programación (ej: PHP).
+					En una segunda parte se estudiarán tecnologías que mejoran la comunicación entre el usuario y la aplicación (ej: AJAX) y alguna tecnología de uso difundido, como los sistemas administradores de contenido (CMS).
+					Opcionalmente se abarcarán temas avanzados, en función de la disponibilidad de tiempo y del interés de los estudiantes.
+				</p>
+
+			</section>
+
+			<hr></hr>
+			<h1>Temas</h1>
+
 			<section class="content_entry">
-				<h3>XML</h3>
-				<img src="img/xml.png" alt="XML"/>
-				<p>.</p>
+
+				<h2>Introduction</h2>
+					<div class="cards" >
+						<img src="img/introduction.jpg"  class="opacate" height="250em"  alt="Introduction"/>
+
+					</div>
 			</section>
-			
+			<div class ="separator"></div>
 			<section class="content_entry">
-				<h3>XHTML</h3>
-				<img src="img/html.png" alt="XHML"/>
-				<p>.</p>
+				<h2>XML</h2>
+					<div class="cards" >
+						<img src="img/xml.jpg"  class="opacate" height="250em"  alt="XML"/>
+					</div>
 			</section>
-			
+			<div class ="separator"></div>
+
+			<section class="content_entry">
+				<h2>XHTML</h2>
+					<div class="cards" >
+						<img src="img/xhtml.jpg"  class="opacate" height="250em"  alt="XHTML"/>
+					</div>
+			</section>
+			<div class ="separator"></div>
+
+			<section class="content_entry">
+				<h2>CSS</h2>
+					<div class="cards" >
+						<img src="img/css.jpeg"   class="opacate"height="250em"  alt="CSS"/>
+					</div>
+			</section>
+			<div class ="separator"></div>
+
+			<section class="content_entry">
+				<h2>JS</h2>
+					<div class="cards" >
+						<img src="img/js.jpeg"  class="opacate"  height="250em"  alt="JS"/>
+					</div>
+			</section>
+			<div class ="separator"></div>
+
+			<section class="content_entry">
+				<h2>PHP</h2>
+					<div class="cards" >
+						<img src="img/php.jpg"   class="opacate" height="250em"  alt="PHP"/>
+					</div>
+			</section>
+
 		</article>
+
+		<hr></hr>
 		<footer>
-			<address>©2016 Jeisson Hidalgo-Céspedes. Todos los derechos reservados</address>
+			<small>©2016 Joel Álvarez-Myrrie. Todos los derechos reservados</small>
 		</footer>
 	</body>
 </html>
