--- a/Pagina Personal/index.html
+++ b/Pagina Personal/index.html
@@ -12,15 +12,8 @@
 			<nav id="main_menu">
 					<ul>
 					<li id="home"><a href="#">Joel Álvarez Myrrie</a></li>
-					<li><a href="php/">PHP</a></li>
-					<li><a href="js/">JS</a></li>
-					<li><a href="css/">CSS</a></li>
-					<li><a href="xhtml/">XHTML</a></li>
-					<li><a href="xml/">XML</a></li>
-					<li><a href="intro/">INTRO</a></li>
-
 					</ul>
-					
+
 			</nav>
 		</header>
 
@@ -37,11 +30,8 @@
 			<section class="content_entry">
 				<img src="img/profile.jpg"  class="opacate center"  height="200" id="profile_pic" alt="Profile Picture"/>
 				<p>
-						 ¡Hola! Soy Joel Álvarez, y soy un estudiante de computación e informatica de la UCR pronto a graduarse.
-						 Esta página corresponde al curso desarrollo de aplicaciones de internet, CI-2413.
-						 Se estarán subiendo los resultados a los ejercicios propuestos por el profesor,
-						 en la parte de <a href="/home/ejercicios.shtml" target="_blank">ejercicios</a>.
-							Los enunciados de los ejercicios se pueden encontrar en la
+						 ¡Hola! Soy Joel Álvarez y soy  estudiante de computación e informática de la UCR, pronto a graduarse.
+						 Esta página corresponde al curso desarrollo de aplicaciones de internet, CI-2413. Los enunciados de los ejercicios se pueden encontrar en la
 							 <a href="http://jeisson.ecci.ucr.ac.cr/appweb/2016b/material/" target="_blank">página del profesor</a>.
 				</p>
 			</section>
@@ -50,11 +40,10 @@
 
 			<section class="content_entry ">
 				<h2>Descripción del curso</h2>
-				<p>Este curso es una introducción al desarrollo de aplicaciones de software que emplean la red Internet como medio de comunicación, con especial énfasis en el uso de tecnologías web.
-					 El curso está orientado a estudiantes de tercer o cuarto año del bachillerato en computación.
-					 El curso está enfocado a los estándares web, como protocolos (ej: HTTP, HTTPS), lenguajes de etiquetado de contenido (ej: XML/HTML/XHTML), lenguajes de presentación (ej: CSS) y
-	 			 	lenguajes de comportamiento (ej: JavaScript) en el lado del cliente. Del lado del servidor, se estudiará el papel del servidor web y cómo crear sitios dinámicos con algún lenguaje de programación (ej: PHP).
-					En una segunda parte se estudiarán tecnologías que mejoran la comunicación entre el usuario y la aplicación (ej: AJAX) y alguna tecnología de uso difundido, como los sistemas administradores de contenido (CMS).
+				<p>Este curso es una introducción al desarrollo de aplicaciones web. El curso está orientado a estudiantes de tercer o cuarto año del bachillerato en computación.
+					Se usan estándares web (HTTP, HTTPS), lenguajes de etiquetado de contenido (XML, HTML, XHTML), lenguajes de presentación (CSS) y
+	 			 	lenguajes de comportamiento (JavaScript) en el lado del cliente. Del lado del servidor se estudiará el papel del servidor web y cómo crear sitios dinámicos con algún lenguaje de programación (PHP).
+					En una segunda parte se estudiarán tecnologías que mejoran la comunicación entre el usuario y la aplicación (AJAX) y alguna tecnología de uso difundido, como los sistemas administradores de contenido (CMS).
 					Opcionalmente se abarcarán temas avanzados, en función de la disponibilidad de tiempo y del interés de los estudiantes.
 				</p>
 
@@ -65,7 +54,7 @@
 
 			<section class="content_entry">
 
-				<h3>Introduction</h3>
+				<h3>Introducción</h3>
 					<div class="cards" >
 						<img src="img/introduction.jpg"  class="opacate" height="250"  alt="Introduction"/>
 
